--- a/style/style-scalable.css
+++ b/style/style-scalable.css
@@ -1,7 +1,11 @@
-* {
-	margin: 0;
-	padding: 0;
-	border: none;
+/* Reset */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    vertical-align: baseline;
+    background: transparent;
 }
 
 .noselect {
@@ -16,42 +20,53 @@
 
 .header {
 	font-family: 'Nunito', sans-serif;
-	font-size: 1.2rem;
-	padding: 5px 0;
+	padding: 0.5vw 0;
+	height: 8vh;
+	width: 100%;
+	font-size: 1.4vw;
 }
 
 .header .logo {
-	margin: 3px 10px 0px 10px;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	margin: 0 0.5%;
+	height: 2.8vw;
+	width: 2.8vw;
 	float:left;
 }
 
 .nav {
-	height: 38px;
+	height: 2.8vw;
 }
 
 .nav ul {
 	list-style: none;
-	margin-right: 37px;
+	margin-right: 2.8vw;
 }
 
 .navEl {
     display: inline-block;
-	margin-top: 7px;
-	margin-right: 5px;
-	margin-left: 5px;
+	margin: 0.7vw 0.5vw 0 0.5vw;
 }
+
 
 .navEl a:link, .navEl a:visited {
 	text-decoration: none;
 }
 
 .h1 {
-	font-size: 2.0em;
+	font-size: 3.3vw;
 	padding: 1% 0;
 }
 
 .h2 {
-	font-size: 1.2em;
+	font-size: 1.8vw;
+	padding: 0 0 1% 0;
+}
+
+.h3 {
+	font-size: 1.4vw;
 	padding: 0 0 1% 0;
 }
 
@@ -75,7 +90,7 @@
 
 .separate {
 	display: inline-block;
-	margin: 0 10px 0 15px;
+	margin: 0 1vw 0 1.5vw;
 }
 
 @keyframes fadeIn {
