--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,8 @@
 body {
-    width: 90%;
-    margin: 0 auto;
-    font-family: Asap;
+    font-family: Source Code Pro;
     color: #eee;
 
-    background-image: url("https://images.unsplash.com/photo-1415025148099-17fe74102b28?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=2129e3f485b3798ca5a67c301143d9b4");
+    background-image: url("../img/bg.jpg");
     
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -30,20 +28,42 @@ body {
      1px  1px 0 #000;
 }
 
-a:link, a:visited {
+#version {
+  position: fixed;
+  top: 1vw;
+  right: 1vw;
+}
+
+#version a:link, #version a:visited {
+  color: #eee;
+}
+
+#version a:hover {
+  color: #111;
+}
+
+#diamond a:link, #diamond a:visited {
   color: #333;
 }
 
-a:hover {
+#diamond a:hover {
   color: #88f;
 }
 
-.hovertext {
-  position: absolute;
-  bottom: 10vh; left: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 8vh;
+#logo-box-1 {
+  background: #ff8888;
+}
+
+#logo-box-2 {
+  background: #ffff88;
+}
+
+#logo-box-3 {
+  background: #88ff88;
+}
+
+#logo-box-4 {
+  background: #e8e8e8;
 }
 
 #credits {
@@ -59,57 +79,4 @@ a:hover {
 
 #credits a:hover {
   color: #eee;
-}
-
-/** Interesting stuff */
-@media (orientation: landscape) {
-  #diamond {
-    width: 50vw; height: 50vh;
-  }
-}
-
-#diamond {
-  margin: 25vh auto 0 auto;
-}
-
-#diamond-logo {
-  width: 50%; height: 0;
-  margin: 0 auto;
-  padding: 25% 0;
-  transform: rotate(45deg);
-   -webkit-transform: rotate(45deg);
-   -ms-transform: rotate(45deg);
-   -moz-transform: rotate(45deg);
-  background: transparent;
-  font-size: 8vw;
-}
-
-.logo-box {
-  position: absolute;
-  width: 50%; height: 50%;
-}
-
-.logo-box span {
-  display: block;
-  position: absolute;
-  top: 50%; left: 50%; 
-  transform: translate(-50% -50%);
-   -webkit-transform: translate(-50%, -50%) rotate(-45deg);
-   -ms-transform: translate(-50%, -50%) rotate(-45deg);
-   -moz-transform: translate(-50%, -50%) rotate(-45deg); 
-}
-
-#logo-box-1 {
-  top: 0; left: 0;
-  background: #ff8888;
-}
-
-#logo-box-2 {
-  top: 0; right: 0;
-  background: #ffff88;
-}
-
-#logo-box-3 {
-  bottom: 0; left: 0; 
-  background: #88ff88;
 }
