--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@ body {
     font-family: Source Code Pro;
     color: #eee;
 
-    background-image: url("../img/bg.jpg");
+    background-image: url("../img/bg-home.jpg");
     
     background-repeat: no-repeat;
     background-attachment: fixed;
