--- a/css/home/style.css
+++ b/css/home/style.css
@@ -1,10 +1,8 @@
 body {
-    width: 90%;
-    margin: 0 auto;
     font-family: Source Code Pro;
     color: #eee;
 
-    background-image: url("https://images.unsplash.com/photo-1415025148099-17fe74102b28?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=2129e3f485b3798ca5a67c301143d9b4");
+    background-image: url("../img/bg-home.jpg");
     
     background-repeat: no-repeat;
     background-attachment: fixed;
