--- a/css/home/style.css
+++ b/css/home/style.css
@@ -2,11 +2,11 @@ body {
     font-family: Source Code Pro;
     color: #eee;
 
-    background-image: url("../img/bg-home.jpg");
-    
+    background-image: url("http://tylerleite.github.io/img/bg-home.jpg");
+
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center; 
+    background-position: center;
 
 }
 
