--- a/css/home/desktop.css
+++ b/css/home/desktop.css
@@ -10,6 +10,13 @@
   width: 10vw;
 }
 
+@media (max-width: 500px) {
+  #version {
+    font-size: 8vw;
+    width: 20vw;
+  }
+}
+
 .fa-desktop {
   border-bottom: 3px solid #eee;
 }
@@ -38,11 +45,11 @@
 .logo-box span {
   display: block;
   position: absolute;
-  top: 50%; left: 50%; 
+  top: 50%; left: 50%;
   transform: translate(-50% -50%);
    -webkit-transform: translate(-50%, -50%) rotate(-45deg);
    -ms-transform: translate(-50%, -50%) rotate(-45deg);
-   -moz-transform: translate(-50%, -50%) rotate(-45deg); 
+   -moz-transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 #logo-box-1 {
@@ -54,11 +61,11 @@
 }
 
 #logo-box-3 {
-  bottom: 0; left: 0; 
+  bottom: 0; left: 0;
 }
 
 #logo-box-4 {
-  bottom: 0; right: 0; 
+  bottom: 0; right: 0;
 }
 
 .hovertext {
