--- a/css/home/desktop.css
+++ b/css/home/desktop.css
@@ -1,20 +1,7 @@
 /** Interesting stuff */
-@media (orientation: landscape) {
-  #diamond {
-    width: 50vw; height: 50vh;
-  }
-}
-
 #version {
-  font-size: 4vw;
-  width: 10vw;
-}
-
-@media (max-width: 500px) {
-  #version {
-    font-size: 8vw;
-    width: 20vw;
-  }
+  font-size: 5vmax;
+  width: 12vmax;
 }
 
 .fa-desktop {
@@ -26,15 +13,15 @@
 }
 
 #diamond-logo {
-  width: 50%; height: 0;
+  width: 50vmin; height: 0;
   margin: 0 auto;
-  padding: 25% 0;
+  padding: 25vmin 0;
   transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
   background: transparent;
-  font-size: 8vw;
+  font-size: 12vmin;
 }
 
 .logo-box {
@@ -69,8 +56,7 @@
 }
 
 .hovertext {
-  position: absolute;
-  bottom: 5vh; left: 0;
+  margin-top: 15vmin;
   width: 100%;
   text-align: center;
   font-size: 8vh;
