--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -1,3 +1,7 @@
+body {
+  background: #333;
+}
+
 #version {
   font-size: 7vh;
   width: 20vh;
@@ -14,7 +18,6 @@
 #diamond {
   margin-top: 11vh;
   font-size: 14vh;
-  width: 100vw;
 }
 
 @media (max-width: 700px) {
@@ -22,10 +25,6 @@
     margin-top: 11vh;
     font-size: 10vh;
   }
-}
-
-.logo-box {
-    width: 100vw;
 }
 
 .logo-box a {
