--- a/css/resume.css
+++ b/css/resume.css
@@ -48,7 +48,7 @@ p {
 #name {
     margin-top: 5%;
     text-align: center;
-    font-size: 36;
+    font-size: 36px;
     display: block;
     margin-bottom: 2%;
 }
@@ -68,7 +68,7 @@ p {
 hr {
     border: 0;
     height: 1px;
-    background: #333; 
+    background: #333;
     background-image: linear-gradient(to right, #333, #333, #ccc);
     width: 55%;
     display: inline-block;
