--- a/main.css
+++ b/main.css
@@ -64,13 +64,41 @@
      1px  1px 0 #000;
 }
 
+
+body {
+  background: url("./graphics/bg.jpg");
+  background-repeat: repeat-x;
+  background-size: contain;
+}
+
 div.page {
+  margin: 0 !important;
+  padding: 0 !important;
   max-width: 100vw;
-  min-height: 95vh;
+  height: 95vh;
   overflow: hidden;
+}
+
+p {
+  width: 100%;
+  font-size: var(--font-size-text);
+  text-align: center;
+  margin-top: var(--pmargin);
+  font-family: 'Press Start 2P', sans-serif;
+  color: var(--text-color-main);
 }
 
 .icon {
     width: 32px;
     height: 32px;
 }
+
+.portrait {
+    width: 512px;
+    height: 493px;
+    display: block;
+    position: fixed;
+    bottom: 0;
+    left: calc(50% - 256px);
+    bottom: -50px;
+}:
