--- a/css/home.css
+++ b/css/home.css
@@ -17,12 +17,27 @@ p {
   color: var(--text-color-main);
 }
 
-.portrait {
-    width: 512px;
-    height: 493px;
+@media (max-width: 500px) {
+  .portrait {
+    width: auto;
+    height: 66vh;
+
     display: block;
+
     position: fixed;
     bottom: 0;
-    left: calc(50% - 256px);
-    bottom: -50px;
+    left: calc(50% - (33vh * 512 / 493));
+  }
+}
+
+@media (min-width: 501px) {
+  .portrait {
+      width: 512px;
+      height: 493px;
+      display: block;
+      position: fixed;
+      bottom: 0;
+      left: calc(50% - 256px);
+      bottom: -50px;
+  }
 }
