--- a/css/articles.css
+++ b/css/articles.css
@@ -1,5 +1,16 @@
 html {
-  background-color: #0f80c4;
+  /* background-color: #0f80c4; */
+  background-color: black;
+  background-image: url("../graphics/articles_bg.png");
+  background-size: 150%;
+  image-rendering: pixelated;
+}
+
+.banner {
+  position: absolute;
+  width: 100%;
+  image-rendering: pixelated;
+  z-index: -1;
 }
 
 .page {
@@ -8,6 +19,11 @@ html {
   min-height: 100vh !important;
   margin: 0 auto 6vh auto;
   padding: 0 2vw;
+
+  position: relative;
+  top: 7vh;
+
+  box-shadow: #303030 1px 4px 16px;
 
   font-family: 'Montserrat', sans-serif;
   background: var(--off-white);
