--- a/css/resume.css
+++ b/css/resume.css
@@ -89,5 +89,5 @@ hr.fullHR {
 }
 
 #hid:after {
-    content: "tyler.leite@yandex.com | 41 Botsford Ave, Milford, CT 06460 | (203) 767 - 8573 ";
+    content: "tyler.leite@yandex.com | 65 13th St, Troy NY | (203) 767 - 8573 ";
 }
