--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@
 }
 
 .noselect {
+  cursor: default;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none;   /* Chrome/Safari/Opera */
   -khtml-user-select: none;    /* Konqueror */
