--- a/css/resume.css
+++ b/css/resume.css
@@ -89,5 +89,5 @@ hr.fullHR {
 }
 
 #hid:after {
-    content: "tyler.leite@yandex.com | 65 13th St, Troy NY | (203) 767 - 8573 ";
+    content: "tyler.leite@yandex.com | 1655-B Alma St, Palo Alto CA | (203) 767 - 8573 ";
 }
